<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="args"
            type="com.reemhazzaa.daftar.tasks.fragments.updateTask.UpdateTaskFragmentArgs" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/aladin"
                    android:text="@string/update_task"
                    android:textColor="@color/title_color"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTV">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alegreya_sc"
                    android:text="@string/task_title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/outlined_et"
                    android:fontFamily="@font/aladin"
                    android:hint="@string/enter_task_title"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@{args.currentItem.title.toString().trim()}"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alegreya_sc"
                    android:text="@string/task_description"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/taskDescriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/outlined_et"
                    android:fontFamily="@font/aladin"
                    android:hint="@string/enter_task_description"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@{args.currentItem.description.toString().trim()}"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alegreya_sc"
                    android:text="@string/task_priority"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/priorities"
                    android:paddingHorizontal="10dp"
                    android:parsePriorityToSpinnerSelection="@{args.currentItem.priority}"
                    android:spinnerMode="dropdown"
                    android:textSize="20sp"
                    tools:listitem="@layout/item_spinner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alegreya_sc"
                    android:text="@string/task_alert"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/setDateBT"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@drawable/outlined_et"
                        android:drawableStart="@drawable/ic_add_date"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/aladin"
                        android:paddingHorizontal="20dp"
                        android:text="@string/select_date"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/dateTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/outlined_et"
                        android:fontFamily="@font/aladin"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@{args.currentItem.date.toString().trim()}"
                        android:textAlignment="gravity"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text="13-3-1995" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/setTimeBT"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@drawable/outlined_et"
                        android:drawableStart="@drawable/ic_circular_alarm_clock_tool"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/aladin"
                        android:paddingHorizontal="20dp"
                        android:text="@string/select_time"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/timeTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/outlined_et"
                        android:fontFamily="@font/aladin"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@{args.currentItem.time.toString().trim()}"
                        android:textAlignment="gravity"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text="12:00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sc"
                        android:text="@string/get_alert_for_this_task"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/alarmSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:checked="@{args.currentItem.isAlarmChecked}" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteTaskButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/outlined_button_primary"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/aladin"
                    android:paddingHorizontal="20dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:drawableTint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateTaskButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outlined_button_primary"
                    android:drawableStart="@drawable/ic__save"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/aladin"
                    android:paddingHorizontal="20dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:drawableTint="@android:color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>